Finished initial implementation of first stage of password reset API.

--- a/src/templates/pages/email-forgot-html.handlebars
+++ b/src/templates/pages/email-forgot-html.handlebars
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    <a href="{{app.url}}user/reset/{{user.code}}">{{app.url}}user/reset/{{user.code}}</a>
+    <a href="{{app.url}}api/user/reset/{{user.resetCode}}">{{app.url}}api/user/reset/{{user.resetCode}}</a>
 </p>
 
 <p>
