--- a/src/templates/pages/email-verify-text.handlebars
+++ b/src/templates/pages/email-verify-text.handlebars
@@ -5,7 +5,7 @@ Your email address is associated with an account in the {{app.name}}.  Before yo
 will need to verify your email address by clicking the link below, or by pasting the URL into your browser's location
 bar:
 
-{{app.url}}user/verify/{{user.verification_code}}
+{{app.url}}api/user/verify/{{user.verification_code}}
 
 If you did not request an account in the {{app.name}}, you can safely ignore this email.
 
