Renamed namespace to avoid confusion with legacy gpii-express-couchuser.

--- a/src/templates/pages/forgot.handlebars
+++ b/src/templates/pages/forgot.handlebars
@@ -13,7 +13,7 @@
             <div class="forgot-viewport"/>
         </div>
 
-        {{{initBlock "gpii.express.couchuser.frontend.forgot"}}}
+        {{{initBlock "gpii.express.user.frontend.forgot"}}}
     </body>
 </html>
 
