--- a/src/templates/pages/login.handlebars
+++ b/src/templates/pages/login.handlebars
@@ -11,6 +11,6 @@
         <div class="controls-viewport"></div>
         <div class="login-viewport"></div>
 
-        {{{initBlock "gpii.ul.hasUserControls" "gpii.express.couchuser.frontend.login"}}}
+        {{{initBlock "gpii.ul.hasUserControls" "gpii.express.user.frontend.login"}}}
     </body>
 </html>
