--- a/src/templates/pages/reset.handlebars
+++ b/src/templates/pages/reset.handlebars
@@ -16,7 +16,7 @@
         </div>
 
 
-        {{{initBlock "gpii.express.couchuser.frontend.reset"}}}
+        {{{initBlock "gpii.express.user.frontend.reset"}}}
     </body>
 </html>
 
