--- a/src/templates/pages/signup.handlebars
+++ b/src/templates/pages/signup.handlebars
@@ -15,7 +15,7 @@
             <div class="signup-viewport"></div>
         </div>
 
-        {{{initBlock "gpii.express.couchuser.frontend.signup"}}}
+        {{{initBlock "gpii.express.user.frontend.signup"}}}
     </body>
 </html>
 
