--- a/src/templates/pages/email-verify-html.handlebars
+++ b/src/templates/pages/email-verify-html.handlebars
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    <a href="{{app.url}}api/user/verify/{{user.verification_code}}">{{app.url}}api/user/verify/{{user.verification_code}}</a>
+    <a href="{{app.url}}verify/{{user.verification_code}}">{{app.url}}verify/{{user.verification_code}}</a>
 </p>
 
 <p>
