Finished initial server and client implementation of /api/user/reset/:code.  Finished server-side tests.

--- a/src/templates/pages/email-forgot-html.handlebars
+++ b/src/templates/pages/email-forgot-html.handlebars
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    <a href="{{app.url}}api/user/reset/{{user.resetCode}}">{{app.url}}api/user/reset/{{user.resetCode}}</a>
+    <a href="{{app.url}}reset/{{user.reset_code}}">{{app.url}}reset/{{user.reset_code}}</a>
 </p>
 
 <p>
