--- a/src/templates/pages/email-forgot-text.handlebars
+++ b/src/templates/pages/email-forgot-text.handlebars
@@ -6,7 +6,7 @@ Your email address is associated with an account in the {{app.name}}.
 We have received a request to reset your password.  If you would like to reset your password, please click the link
 below or copy and paste it into your browser's location bar:
 
-{{app.url}}api/user/reset/{{user.resetCode}}
+{{app.url}}reset/{{user.reset_code}}
 
 If you did not request a password reset or have changed your mind, simply ignore this email and no changes will be made
 to your account.
